small update to signal which sessions have CNO

--- a/.github/workflows/AnalyzesGeneration_04.ipynb
+++ b/.github/workflows/AnalyzesGeneration_04.ipynb
@@ -542,7 +542,7 @@
     "\n",
     "\n",
     "\n",
-    "def phaseNumberAndDirection(path) :\n",
+    "def phaseNumberDirectionAndCNO(path) :\n",
     "\n",
     "    session_infos = pd.read_csv(path)\n",
     "    session_infos = list(session_infos.iloc[0])#get the sessions parameter\n",
@@ -551,7 +551,7 @@
     "    elif session_infos[6] == 3 : phase = 3 #then it's phase 3\n",
     "    elif session_infos[4] == '[90, 270]' : phase = 1\n",
     "    else : phase = 2\n",
-    "    return phase, session_infos[4]\n"
+    "    return phase, session_infos[4], session_infos[3] != \"none\"\n"
    ]
   },
   {
@@ -846,9 +846,10 @@
     "for i in range(len(sessionFolders)):\n",
     "\n",
     "    base_path = mouseFolder_Path + '/' + sessionFolders[i] + '/' + sessionFolders[i]\n",
-    "    phase, direction = phaseNumberAndDirection(base_path + \"_sessionparam.csv\")\n",
+    "    phase, direction, cno = phaseNumberDirectionAndCNO(base_path + \"_sessionparam.csv\")\n",
     "    dataSouris = \"Phase \" + str(phase) + \" Session \" + str(i + 1)\n",
     "    if phase != 0 : dataSouris = dataSouris + \" direction : \" + direction\n",
+    "    if cno : dataSouris = dataSouris + \" session CNO\"\n",
     "\n",
     "    trajectorypng = base_path + '_TrajectoriesAndSpeed.png'\n",
     "    speedpng = base_path + '_NbOfQTurns.png'\n",
@@ -933,14 +934,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# with open(generalFolder + \"/ListSessionsAnalyzed.txt\", \"w\") as f :#file is created above if it was not\n",
-    "#     for i in sessionFolders:\n",
-    "#         f.write(i + \"\\n\")\n",
-    "#     f.close()"
+    "session_infos = pd.read_csv(base_path + \"_sessionparam.csv\")\n",
+    "infos = list(session_infos.iloc[0])\n",
+    "infos[3] != \"none\""
    ]
   }
  ],
