--- a/.github/workflows/AnalyzesGeneration_04.ipynb
+++ b/.github/workflows/AnalyzesGeneration_04.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,8 +474,9 @@
     "        for u in [clock_turn, anti_clock_turn][a] :\n",
     "            plt.plot(time_average[u[0] : u[1] + 1]  - time_average[u[0]], speed[u[0] : u[1] + 1], linewidth = 0.5, c= \"dimgray\")\n",
     "        plt.xlim(0, 0.7); plt.ylim(0, 60)\n",
-    "        xmed, ymed = compute_median_trajectory([speed[u[0] : u[1] + 1] for u in [clock_turn, anti_clock_turn][a]], [time_average[u[0] : u[1] + 1] for u in [clock_turn, anti_clock_turn][a]])\n",
-    "        plt.plot(xmed, ymed, c= 'crimson'); plt.title(\"speed of the quarters turns \" + direction)\n",
+    "        if len([clock_turn, anti_clock_turn][a]) != 0:\n",
+    "            xmed, ymed = compute_median_trajectory([speed[u[0] : u[1] + 1] for u in [clock_turn, anti_clock_turn][a]], [time_average[u[0] : u[1] + 1] for u in [clock_turn, anti_clock_turn][a]])\n",
+    "            plt.plot(xmed, ymed, c= 'crimson'); plt.title(\"speed of the quarters turns \" + direction)\n",
     "        plt.ylabel(\"speed in cm/s\"); plt.xlabel(\"time in s\")\n",
     "        \n",
     "        ###########\n",
@@ -493,8 +494,9 @@
     "            plt.plot(time_average[u[0]: u[1] + 1] - time_average[u[0]], temp_orientation, linewidth = 0.5, c= \"dimgray\")\n",
     "        plt.ylim(-180, 180); plt.xlim(0, 0.7)\n",
     "        plt.ylabel(\"changes in direction (degree)\"); plt.xlabel(\"time in s\")\n",
-    "        xmed, ymed = compute_median_trajectory(list_temp_orientation, [time_average[u[0] : u[1] + 1] for u in [clock_turn, anti_clock_turn][a]])\n",
-    "        plt.plot(xmed, ymed, c= 'crimson')\n",
+    "        if len([clock_turn, anti_clock_turn][a]) != 0:\n",
+    "            xmed, ymed = compute_median_trajectory(list_temp_orientation, [time_average[u[0] : u[1] + 1] for u in [clock_turn, anti_clock_turn][a]])\n",
+    "            plt.plot(xmed, ymed, c= 'crimson')\n",
     "        plt.title(\"direction changes \" + direction)\n",
     "#########\n",
     "\n",
@@ -556,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -741,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -750,51 +752,7 @@
      "text": [
       "1\n",
       "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "10\n",
-      "11\n",
-      "12\n",
-      "13\n",
-      "14\n",
-      "15\n",
-      "16\n",
-      "17\n",
-      "18\n",
-      "19\n",
-      "20\n",
-      "21\n",
-      "22\n",
-      "23\n",
-      "24\n",
-      "25\n",
-      "26\n",
-      "27\n",
-      "28\n",
-      "29\n",
-      "30\n",
-      "31\n",
-      "32\n",
-      "33\n",
-      "34\n",
-      "35\n",
-      "36\n",
-      "37\n",
-      "38\n",
-      "39\n",
-      "40\n",
-      "41\n",
-      "42\n",
-      "43\n",
-      "44\n",
-      "45\n",
-      "46\n",
-      "47\n"
+      "3\n"
      ]
     }
    ],
@@ -871,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -913,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -934,24 +892,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "session_infos = pd.read_csv(base_path + \"_sessionparam.csv\")\n",
-    "infos = list(session_infos.iloc[0])\n",
-    "infos[3] != \"none\""
+    "# session_infos = pd.read_csv(base_path + \"_sessionparam.csv\")\n",
+    "# infos = list(session_infos.iloc[0])\n",
+    "# infos[3] != \"none\""
    ]
   }
  ],
