--- a/.github/workflows/AnalyzesGeneration_04.ipynb
+++ b/.github/workflows/AnalyzesGeneration_04.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +272,6 @@
     "\n",
     "    plt.yticks(ticks = [1, 2, 3, 4], labels= ['NE', 'NW', 'SE', 'SW'])\n",
     "    plt.xlabel('time (s)')\n",
-    "    plt.title('Quarter turn and between objects movements')\n",
     "    plt.ylim(0,5)\n",
     "    plt.legend(loc = 2)\n",
     "    fig.savefig(mouseFolder_Path + '/' + session + '/' + session + '_ColoredDot.png',bbox_inches='tight')\n",
@@ -548,17 +547,20 @@
     "\n",
     "    session_infos = pd.read_csv(path)\n",
     "    session_infos = list(session_infos.iloc[0])#get the sessions parameter\n",
-    "    if not session_infos[10] : phase =  0 #if no reward can be given, then it's the free exploration\n",
-    "    elif session_infos[6] == 1 : phase =  4 #if only one alternative is available for the objects at a given time in the session, it's session 4\n",
-    "    elif session_infos[6] == 3 : phase = 3 #then it's phase 3\n",
-    "    elif session_infos[4] == '[90, 270]' : phase = 1\n",
+    "    if session_infos[0] == \"Lucie\" : a = -1\n",
+    "    else : a = 0\n",
+    "\n",
+    "    if not session_infos[10 + a] : phase =  0 #if no reward can be given, then it's the free exploration\n",
+    "    elif session_infos[6 + a] == 1 : phase =  4 #if only one alternative is available for the objects at a given time in the session, it's session 4\n",
+    "    elif session_infos[6 + a] == 3 : phase = 3 #then it's phase 3\n",
+    "    elif session_infos[4 + a] == '[90, 270]' : phase = 1\n",
     "    else : phase = 2\n",
     "    return phase, session_infos[4], session_infos[3] != \"none\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -743,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +754,51 @@
      "text": [
       "1\n",
       "2\n",
-      "3\n"
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "14\n",
+      "15\n",
+      "16\n",
+      "17\n",
+      "18\n",
+      "19\n",
+      "20\n",
+      "21\n",
+      "22\n",
+      "23\n",
+      "24\n",
+      "25\n",
+      "26\n",
+      "27\n",
+      "28\n",
+      "29\n",
+      "30\n",
+      "31\n",
+      "32\n",
+      "33\n",
+      "34\n",
+      "35\n",
+      "36\n",
+      "37\n",
+      "38\n",
+      "39\n",
+      "40\n",
+      "41\n",
+      "42\n",
+      "43\n",
+      "44\n",
+      "45\n",
+      "46\n",
+      "47\n"
      ]
     }
    ],
@@ -771,6 +817,7 @@
     "if not os.path.exists(generalFolder):\n",
     "    os.mkdir(generalFolder)\n",
     "generalPath=os.path.join(generalFolder,generalName+\".html\") #Ajoute le fichier html dans le dossier\n",
+    "secondPath = os.path.join(generalFolder,mouseName+ \"_Behavior\" +\".html\")\n",
     "if not os.path.exists(generalFolder + \"/ListSessionsAnalyzed.txt\"):\n",
     "    listSessionAnalyzed = []\n",
     "    with open(generalFolder + \"/ListSessionsAnalyzed.txt\", \"w\") as f :\n",
@@ -804,10 +851,13 @@
     "for i in range(len(sessionFolders)):\n",
     "\n",
     "    base_path = mouseFolder_Path + '/' + sessionFolders[i] + '/' + sessionFolders[i]\n",
+    "    \n",
     "    phase, direction, cno = phaseNumberDirectionAndCNO(base_path + \"_sessionparam.csv\")\n",
     "    dataSouris = \"Phase \" + str(phase) + \" Session \" + str(i + 1)\n",
     "    if phase != 0 : dataSouris = dataSouris + \" direction : \" + direction\n",
     "    if cno : dataSouris = dataSouris + \" session CNO\"\n",
+    "\n",
+    "    #base_path = \"NETDATA/EqpRobbe/Lucie/Foraging_task/Datas_foraging\" + mouseName + '/' + sessionFolders[i] + '/' + sessionFolders[i]\n",
     "\n",
     "    trajectorypng = base_path + '_TrajectoriesAndSpeed.png'\n",
     "    speedpng = base_path + '_NbOfQTurns.png'\n",
@@ -824,6 +874,33 @@
     "    #remove_lines_in_html(generalPath,Folder_path)\n",
     "insert_in_html(generalPath, images, mouseName)\n",
     "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#creat the html for the graph showing the behavior of the animal\n",
+    "with open(generalFolder + \"/ListSessionsAnalyzed.txt\", \"w\") as f :#file is created above if it was not\n",
+    "    for i in sessionFolders:\n",
+    "        f.write(i + \"\\n\")\n",
+    "    f.close()\n",
+    "\n",
+    "\n",
+    "colored_image = [header1+mouseName+header2]\n",
+    "for i in range(len(sessionFolders)):\n",
+    "\n",
+    "    base_path = mouseFolder_Path + '/' + sessionFolders[i] + '/' + sessionFolders[i]\n",
+    "    \n",
+    "    phase, direction, cno = phaseNumberDirectionAndCNO(base_path + \"_sessionparam.csv\")\n",
+    "    dataSouris = \"Phase \" + str(phase) + \" Session \" + str(i + 1)\n",
+    "    if phase != 0 : dataSouris = dataSouris + \" direction : \" + direction\n",
+    "    if cno : dataSouris = dataSouris + \" session CNO\"\n",
+    "    \n",
+    "    coloredpath= base_path + '_ColoredDot.png'\n",
+    "    colored_image.append(f'<h3 style=\"text-align: center;\"><span style=\"text-decoration: underline;\"><strong>{sessionFolders[i]}</strong></span></h3>')\n",
+    "    colored_image.append(f'<h4 style=\"text-align: center;\">{dataSouris}</h4>')\n",
+    "    colored_image.append(f'<p><img src=\"{coloredpath}\" alt=\"\" /></p>')\n",
+    "    colored_image.append('<p></p>')\n",
+    "\n",
+    "insert_in_html(secondPath, colored_image, mouseName)\n",
     "\n"
    ]
   },
@@ -832,46 +909,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# #Analyzes (old ones) \n",
-    "\n",
-    "# for i in range (len(sessionFolders)):\n",
-    "#     csvCentroid_fullpath=Folder_path + mouseName + '/' + sessionFolders[i] + '/' + sessionFolders[i] + '_centroidTXY.csv'\n",
-    "#     csvTurnFile_fullpath=Folder_path + mouseName + '/' + sessionFolders[i] + '/' + sessionFolders[i] + '_turnsinfo.csv'\n",
-    "#     trajectories_and_speed(sessionFolders[i])\n",
-    "#     NumberOfQTurns(sessionFolders[i])\n",
-    "#     update_progress(i/(len(sessionFolders)-1))\n",
-    "\n",
-    "# #for i in range(len(sessionFolders)): #Need to find a way to print when a file is not found without disturbing the progress bar : appear at the end of progression\n",
-    "# #    if not os.path.isfile(csvCentroid_fullpath):\n",
-    "# #        print(f\"Centroid file from {sessionFolders[i]} was not found\")\n",
-    "# #    elif not os.path.isfile(csvTurnFile_fullpath):\n",
-    "# #        print(f\"The turn file from {sessionFolders[i]} was not found\")\n",
-    "\n",
-    "# #HTML for the animal \n",
-    "\n",
-    "# generalName=mouseName+\"_Analysis\"\n",
-    "# generalFolder=os.path.join(mouseFolder_Path,\"Analysis\") #Ajoute un dossier appelé \"Analysis\" dans le dossier de la souris Add a \n",
-    "# if not os.path.exists(generalFolder):\n",
-    "#     os.mkdir(generalFolder)\n",
-    "# generalPath=os.path.join(generalFolder,generalName+\".html\") #Ajoute le fichier html dans le dossier \n",
-    "\n",
-    "# #Create html image tag\n",
-    "\n",
-    "# images=[]\n",
-    "# for i in range(len(sessionFolders)):\n",
-    "#     trajectorypngfullpath=Folder_path + mouseName + '/' + sessionFolders[i] + '/' + sessionFolders[i] + '_TrajectoriesAndSpeed.png'\n",
-    "#     turnspngfullpath=Folder_path + mouseName + '/' + sessionFolders[i] + '/' + sessionFolders[i] + '_NbOfQTurns.png'\n",
-    "#     images.append(sessionFolders[i])\n",
-    "#     images.append(f\"<a href=#{sessionFolders[i]}><img src='{trajectorypngfullpath}' alt='{sessionFolders[i]}' title='{sessionFolders[i]}'/></a>\")\n",
-    "#     images.append(f\"<a href=#{sessionFolders[i]}><img src='{turnspngfullpath}' alt='{sessionFolders[i]}' title='{sessionFolders[i]}'/></a>\")\n",
-    "#     remove_lines_in_html(generalPath,Folder_path)\n",
-    "# insert_in_html(generalPath, images, mouseName)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -892,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
