correct a problem of y axis inversion

--- a/.github/workflows/AnalyzesGeneration_04.ipynb
+++ b/.github/workflows/AnalyzesGeneration_04.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
     "#for when on Alice's computer : \n",
     "Folder_path = '/home/david/Documents/'\n",
     "\n",
-    "mouseName='MOU3828' #This is the only parameter to change in this cell (in this computer)\n",
+    "mouseName='MOU4104' #This is the only parameter to change in this cell (in this computer)\n",
     "\n",
     "mouseFolder_Path=Folder_path+mouseName\n",
     "os.chdir(mouseFolder_Path)\n",
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +547,7 @@
     "\n",
     "    session_infos = pd.read_csv(path)\n",
     "    session_infos = list(session_infos.iloc[0])#get the sessions parameter\n",
-    "    if session_infos[0] == \"Lucie\" : a = -1\n",
+    "    if len(session_infos) == 10 : a = -1\n",
     "    else : a = 0\n",
     "\n",
     "    if not session_infos[10 + a] : phase =  0 #if no reward can be given, then it's the free exploration\n",
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,8 +580,12 @@
     "\n",
     "        xpositions=df['xposition'].to_numpy()\n",
     "        ypositions=df['yposition'].to_numpy()\n",
+    "        \n",
     "        distances=np.array([((((xpositions[i]-xpositions[i-1])**2)+((ypositions[i]-ypositions[i-1])**2))**0.5) for i in range(1,len(ypositions))])\n",
     "        resolution=resolution = 512,512\n",
+    "\n",
+    "        df['yposition'] = resolution[1] - df['yposition']\n",
+    "\n",
     "        distances = distances *(0.84/resolution[0]) #convert distance to m with apparatus length = 84 cm\n",
     "        totaldistance=np.sum(distances)\n",
     "        averagerunningspeed=np.sum(distances)/(12*60)\n",
@@ -614,7 +618,7 @@
     "        #print(ratioRunvsImmob)\n",
     "\n",
     "        axs[1].set_title('Average cruise speed=' + np.array2string(meanCruiseSpeed,precision=2) + 'cm/s      Ratio Run/Immo=' + np.array2string(ratioRunvsImmob,precision=2))\n",
-    "        axs[1].spines[['right', 'top']].set_visible(False) #need to comment if there is an error \n",
+    "        #axs[1].spines[['right', 'top']].set_visible(False) #need to comment if there is an error \n",
     "        axs[1].set_xlabel('Speed (cm/s)')\n",
     "        axs[1].set_ylabel('Proba of event')\n",
     "        axs[1].set_ylim([0, 0.1])\n",
@@ -745,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -753,52 +757,7 @@
      "output_type": "stream",
      "text": [
       "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "10\n",
-      "11\n",
-      "12\n",
-      "13\n",
-      "14\n",
-      "15\n",
-      "16\n",
-      "17\n",
-      "18\n",
-      "19\n",
-      "20\n",
-      "21\n",
-      "22\n",
-      "23\n",
-      "24\n",
-      "25\n",
-      "26\n",
-      "27\n",
-      "28\n",
-      "29\n",
-      "30\n",
-      "31\n",
-      "32\n",
-      "33\n",
-      "34\n",
-      "35\n",
-      "36\n",
-      "37\n",
-      "38\n",
-      "39\n",
-      "40\n",
-      "41\n",
-      "42\n",
-      "43\n",
-      "44\n",
-      "45\n",
-      "46\n",
-      "47\n"
+      "2\n"
      ]
     }
    ],
@@ -913,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -934,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
