--- a/.github/workflows/AnalyzesGeneration_05-1.ipynb
+++ b/.github/workflows/AnalyzesGeneration_05-1.ipynb
@@ -104,7 +104,7 @@
     "mouseName='MOU4178' #This is the only parameter to change in this cell (in this computer)\n",
     "\n",
     "mouseFolder_Path=Folder_path+mouseName\n",
-    "codename =  \"AnalyzesGeneration_05.ipynb\"\n",
+    "codename =  \"AnalyzesGeneration_05-1.ipynb\"\n",
     "os.chdir(mouseFolder_Path)\n",
     "sessionFolders=[ name for name in os.listdir(mouseFolder_Path) if os.path.isdir(os.path.join(mouseFolder_Path, name)) and name[0:3]=='MOU']\n",
     "sessionFolders.sort()"
