--- a/.github/workflows/AnalyzesGeneration_05_3.ipynb
+++ b/.github/workflows/AnalyzesGeneration_05_3.ipynb
@@ -20,7 +20,7 @@
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.patches import Polygon\n",
     "from scipy.ndimage import gaussian_filter as smooth\n",
-    "from own_Functions import *\n",
+    "from own_Functions_05_3 import *\n",
     "from median_thomas import *\n",
     "import gc\n",
     "from IPython.display import clear_output\n",
@@ -104,7 +104,7 @@
     "mouseName='MOU4178' #This is the only parameter to change in this cell (in this computer)\n",
     "\n",
     "mouseFolder_Path=Folder_path+mouseName\n",
-    "codename =  \"AnalyzesGeneration_05-1.ipynb\"\n",
+    "codename =  \"AnalyzesGeneration_05_3.ipynb\"\n",
     "os.chdir(mouseFolder_Path)\n",
     "sessionFolders=[ name for name in os.listdir(mouseFolder_Path) if os.path.isdir(os.path.join(mouseFolder_Path, name)) and name[0:3]=='MOU']\n",
     "sessionFolders.sort()"
