--- a/.github/workflows/analysis_all_session_05_3.ipynb
+++ b/.github/workflows/analysis_all_session_05_3.ipynb
@@ -13,7 +13,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "from own_Functions import *\n",
+    "from own_Functions_05_3 import *\n",
     "from scipy.ndimage import gaussian_filter as smooth\n",
     "import scipy.stats as stats\n",
     "import matplotlib.patches as mpatches\n",
