--- a/.github/workflows/Current_version/AnalyzesGeneration_05_4.ipynb
+++ b/.github/workflows/Current_version/AnalyzesGeneration_05_4.ipynb
@@ -28,7 +28,7 @@
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.patches import Polygon\n",
     "from scipy.ndimage import gaussian_filter as smooth\n",
-    "from own_Functions import *\n",
+    "from own_Functions_05_4 import *\n",
     "from median_thomas import *\n",
     "import gc\n",
     "from IPython.display import clear_output\n",
